Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 RoxygenNote: 7.1.2
 Imports: 
     magrittr
+URL: https://github.com/brunomioto/ABNTcitation
+BugReports: https://github.com/brunomioto/ABNTcitation/issues
